infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # spec.ingressClassName: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-service
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: stubhub-ticketing.dev
      http:
        paths:
          - path: /api/v1/auth/(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-service
                port:
                  number: 80
